2017-05-02 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Minor fix in list of supported data types.

2017-05-01 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Document separation of _Bool/bool and __bit for mcs51 and ds390,
	  fix typos,
	  automatic version number.

2017-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  doc/sdccman.lyx,
	  .version:
	  Resurrect SDCC macro zombie for old SiLabs IDE support.
	* sdcc.spec:
	  Update list of targets in description.

2017-04-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c,
	  src/SDCCicode.c,
	  support/regression/tests/bug-2601.c,
	  support/regression/tests/bug3537338.c,
	  support/regression/tests/gcc-torture-execute-20021120-1.c:
	  Fix bug #2602.
	* src/SDCCsymt.h,
	  src/SDCCsymt.c:
	  Minor improvements for const-correctness.
	* src/SDCCpeeph.c:
	  Fix bug #2600.

2017-04-28 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2590.c:
	  Enable for all z80-related backends.
	* support/regression/tests/bug-2601.c:
	  Disable for ds390.

2017-04-27 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update manual for --std-sdcc99 vs. --std-c11 change.
	* device/lib/tlcs90/crt0.s:
	  Fix bug #2583.

2017-04-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c (newEnumType): fixed bug 2545
	* support/regression/tests/enum.c: added test
	* support/regression/tests/bug-2590.c: disabled for non-z80

2017-04-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (assignBit): disabled to fix a warning
	* src/SDCCicode.c (geniCodeLeftShift): fixed bug, replaced TABs
	* src/SDCCralloc.hpp (create_cfg): fixed warning, replaced TABs
	* src/SDCCsymt.c (computeType): fixed bug #2585
	* src/stm8/ralloc2.cc (assign_operands_for_cost): fixed warning, replaced TABs
	* src/z80/gen.c (genLeftShift, genRightShift): fixed warning
	* src/z80/peep.c (z80SurelyWrites): fixed warning