@@ -1943,6 +1943,14 @@ matchLine (char *s, const char *d, hTab ** vars)
           while (ISCHARSPACE (*d))
             d++;
         }
+      else if (*s == ',' && *d == ',') /* Allow comman to match comma followed by whitespace */
+        {
+          s++, d++;
+          while (ISCHARSPACE (*s))
+            s++;
+          while (ISCHARSPACE (*d))
+            d++;
+        }
       else if (*s && *d) /* they should be an exact match otherwise */
         {
           if (*s++ != *d++)
