@@ -1,3 +1,10 @@
+2017-05-04 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCpeeph.c:
+	  Be more forgiving about omitted whitespace after comma in peephole matching (whitespace handling had become stricter in the fix to #2600).
+	* src/z80/peep.c:
+	  Slightly more accurate analysis of register reads.
+
 2017-05-02 Philipp Klaus Krause <pkk AT spth.de>
 
 	* doc/sdccman.lyx:
